# athanor

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  azure-pipelines.yml  buildSNSInput.sh  fetchAllLibs.sh  how-to-release.txt  readme.md  release-notes.txt
getGitRevision/: gitRevision.cpp.in
include/json/: json.hpp
include/murmurHash/: CMakeLists.txt
scripts/: buildSNSInput.sh  makeRelease.sh  manualBuildAthanorInput.sh  validateSolutions.py
src/: constructorShortcuts.h  gitRevision.h  hashExperiements.cpp  jsonModelParser.cpp  jsonModelParser.h  jsonTest.cpp  main.cpp  variantExperiments.cpp  variantOperations.h
src/base/: base.h  domainRef.cpp  domainRef.h  exprRef.cpp  exprRef.h  intSize.h  iterRef.h  refs.h  standardSharedPtr.h  triggers.h  typeDecls.h  typesMacros.h  valBase.h  valRef.cpp  valRef.h  viewRef.h
src/common/: common.cpp  common.h  hash.h  hash.inc  toString.h  tostring.inc  tupleForEach.h
src/neighbourhoods/: boolNeighbourhoods.cpp  emptyNeighbourhoods.cpp  enumNeighbourhoods.cpp  functionNeighbourhoods.cpp  intNeighbourhoods.cpp  mSetNeighbourhoods.cpp  neighbourhoods.cpp  neighbourhoods.h  partitionNeighbourhoods.cpp  sequenceNeighbourhoods.cpp  setNeighbourhoods.cpp  tupleNeighbourhoods.cpp
src/operators/: boolOperators.cpp  boolOperators.h  boolProducing.h  boolReturning.h  definedVarHelper.cpp  definedVarHelper.h  definedVarHelper.hpp  emptyOrViolatingOptional.h  enumRange.cpp  enumRange.h  flatten.h  functionQuantifier.cpp  intOperators.h  intProducing.h  intRange.cpp  intRange.h  intReturning.h  iterator.cpp  iterator.h  mSetQuantifier.cpp  opAbs.cpp  opAbs.h  opAllDiff.cpp  opAllDiff.h  opAmplifyConstraint.cpp  opAmplifyConstraint.cpp.back  opAmplifyConstraint.h  opAnd.cpp  opAnd.h  opBoolEq.cpp  opBoolEq.h  opCatchUndef.cpp  opCatchUndef.h  opDiv.cpp  opDiv.h  opEnumEq.cpp  opEnumEq.h  opFlattenOneLevel.cpp  opFlattenOneLevel.h  opFunctionDefined.cpp  (+119 more)
src/operators/boolOperators/: opAnd.cpp  setForAll.cpp
src/operators/intOperators/: opSum.cpp
src/operators/setOperators/: opSetIntersect.cpp  opSetNotEq.cpp  opSetSize.cpp
src/parsing/: boolParser.cpp  emptyTypeHelper.cpp  enumParser.cpp  functionParser.cpp  intParser.cpp  jsonModelParser.cpp  jsonModelParser.h  mSetParser.cpp  parserCommon.cpp  parserCommon.h  partitionParser.cpp  quantifierParser.cpp  sequenceParser.cpp  setParser.cpp  tupleParser.cpp
src/search/: endOfSearchException.h  exploreStrategies.h  improveStrategies.h  model.cpp  model.h  neighbourhoodSearchStrategies.h  neighbourhoodSelectionStrategies.h  objective.cpp  objective.h  searchStrategies.h  solver.cpp  solver.h  statsContainer.cpp  statsContainer.h  tabuSearchStrategy.h  ucbNeighbourhoodSelection.h  ucbSelector.h  violationContainer.cpp  violationContainer.h  violationDescription.h
src/triggerBases/: intTrigger.h  setTrigger.h
src/triggers/: allTriggers.h  boolTrigger.h  emptyTrigger.h  enumTrigger.h  functionTrigger.h  intTrigger.h  mSetTrigger.h  partitionTrigger.h  sequenceTrigger.h  setTrigger.h  tupleTrigger.h
src/types/: allTypes.h  allVals.h  base.h  bool.cpp  bool.h  boolVal.h  constructors.cpp  domain.h  empty.cpp  empty.h  emptyVal.h  enum.cpp  enum.h  enumVal.h  function.cpp  function.h  functionVal.h  globalDefinitions.cpp  globalFunctions.cpp  int.cpp  int.h  intVal.h  mSet.cpp  mSet.h  mSetVal.h  parentCheck.h  partition.cpp  partition.h  partitionVal.h  sequence.cpp  sequence.h  sequenceVal.h  set.cpp  set.h  setVal.h  sizeAttr.h  tuple.cpp  tuple.h  tupleVal.h  typeOperations.h  (+2 more)
src/types/forwardDecls/: changeValue.h  compare.h  constructValue.h  copy.h  getDomainSize.h  hash.h  print.h  typesAndDomains.h
src/types/operators/: operators.h  setOperators.h
src/utils/: OptionalRef.h  cachedSharedPtr.h  fastIterableIntSet.h  filename.h  flagSet.h  getExecPath.cpp  getExecPath.h  hashUtils.cpp  hashUtils.h  ignoreUnused.h  random.cpp  random.h  runCommand.h  safePow.h  simpleCache.h  stackFunction.h  variantOperations.h
src/utils/fnv/: fnv.h  hash_64a.c  longlong.h
tests/: runAll.sh
tests/failing_tests/: emptyCheckers.essence  matrix2dShiftedIndices.essence  sequenceLitUndefinedBasic3.essence
tests/instances/: GolombRuler.essence  MSetSubsetMedium.essence  MSetSubsetSimple.essence  absSimple.essence  alg-scheduler-param1.param  alg-scheduler.essence  and1.essence  basicPartitionTogether.essence  bool_is_param1.param  bool_is_param2.param  cvrp-eil13.param  cvrp-eil23.param  cvrp-eil7.param  cvrp.essence  flattenedComprehension.essence  functionDefinedAndFunctionRangeBasic.essence  functionFromSetSimple.essence  functionFromSetSimple2.essence  functionPartialFromSetBasic.essence  functionPreimageBasic.essence  functionRange.essence  functionalDefinedCircularInts-post-check.sh  functionalDefinedCircularInts.essence  functionalDefinedFunctionIncreasing1.essence  functionalDefinedFunctionIncreasing2.essence  functionalDefinedFunctionWithConditions.essence  functionalDefinedFunctionWithImplies.essence  functionalDefinedFunctionWithSearchSimple.essence  functionalDefinedSequenceIncreasing1.essence  functionalDefinedSequenceIncreasing2.essence  functionalDefinedSequenceWithConditions.essence  functionalDefinedSequenceWithImplies.essence  intLargeDomain.essence  issue11.essence  knapsack-50.param  lexObjectives1.essence  mSetEq.essence  mSetOfEven.essence  mSetSubset.essence  matrix2dShiftedIndices.essence  (+37 more)
web-app/serverWorkingDir/: athanorWorker.js  conjureServer.py  essenceInput.js  index.html
